--- a/manuscrit_G_LEFEBVRE/tex_pictures/schema_irrigation_foie.tex
+++ b/manuscrit_G_LEFEBVRE/tex_pictures/schema_irrigation_foie.tex
@@ -7,7 +7,7 @@
 %\put(100,0){\line(0,1){100}}\put(0,100){\line(1,0){100}}
 
 \put(57,92.5){Sang artériel, riche en oxygène}
-\put(57,89){Sang veinal, pauvre en oxygène}
+\put(57,89){Sang veineux, pauvre en oxygène}
 
 \put(40,75){Foie}
 \put(82,18){Intestin grêle}
