--- a/manuscrit_G_LEFEBVRE/main.tex
+++ b/manuscrit_G_LEFEBVRE/main.tex
@@ -72,6 +72,7 @@
 %%%%%% Variable d'environnement %%%%%%%%
 \graphicspath{{../img/}} %%
 
+
 \setlength\doublerulesep{2mm} %% hauteur entre 2 \hline successifs
 \newlength{\retraittableau}
 \setlength{\retraittableau}{-4mm}
@@ -109,6 +110,9 @@
 %\captionsetup[subfigure]{labelfont=bf,textfont=normalfont,justification=raggedright}
 
 \newcommand{\mylettrine}[2]{\lettrine[lines=2, lhang=0.33, loversize=0.25]{#1}{#2}} 
+%\newcommand{\mylettrine}[2]{\lettrine[lines=2, lhang=0.33, loversize=0.25]{$\mathscr{#1}$}{#2}} 
+
+
 %%%%%% MES MACROS %%%%%%%%
 
 \newcommand{\custompart}[3]{
