Travaux de mise en page

--- a/manuscrit_G_LEFEBVRE/annexe_gaussienne.tex
+++ b/manuscrit_G_LEFEBVRE/annexe_gaussienne.tex
@@ -12,10 +12,10 @@ f(x)=\dfrac{1}{\sigma \sqrt{2\pi}} \exp\left( \frac{-1}{2}  \left(  \dfrac{x-c}{
 
 \begin{prop}
 Les dérivées d'une gaussiennes sont données par~:
-\begin{itemize}
+\begin{myitemize}
 \item pour la dérivée première~: $f'(x)= -\dfrac{x-c}{\sigma^2}f(x), $
 \item pour la dérivée seconde~: $f''(x)= \dfrac{(x-c+\sigma)(x-c-\sigma)}{\sigma^2}f(x). $
-\end{itemize}
+\end{myitemize}
 \end{prop}
 
 Une gaussienne étant toujours positive (car l'exponentielle l'est toujours), la propriété ci-dessus permet de mettre en avant le rôle des points d'abscisse~$c-\sigma$ et~$c+\sigma$, lieu des changements de concavité (annulation de la dérivée seconde).
@@ -256,11 +256,11 @@ Le gradient de $f$ est donné par~:
 \end{pmatrix}.
 \end{equation}
 Ainsi, à $\sigma$ fixé, $\diff{f}{w}$ est toujours du signe de $a^2-\sigma^2$. Il ne s'annule donc jamais. Il n'y a donc pas de point stationnaire. Pour $\sigma$ fixé~:
-\begin{itemize}
+\begin{myitemize}
 \item $f$ est croissante si $\sigma < a$
 \item $f$ est décroissante si $a<\sigma$
 \item $f(\sigma=a, w) \equiv 0$.
-\end{itemize}
+\end{myitemize}
 \paragraph{Lignes de niveaux de $f( \sigma,w )$.}
 Soit $w_k(\sigma)$ la ligne de niveau correspondant à $f(\sigma,w)=-k$, avec $k= (\Delta c ^2) /2$. On a donc~:
 \begin{align*}
